--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .terraform/
+.history
 terraform.tfstate.backup
+
+secrets.tfvars
+scripts/.env
+
+abstraction_bak/
+log_tfstate/
+static_web_files/
